# Project_SK

./: .env.template  Agent.py  README.md  agentstate.py  app.py  chat_memory.json  fullworking_chatbot.ipynb  main.py  pathfinder.py  pyproject.toml  requirements.txt  sk_listen.py  sk_speak.py  sk_tools.py  universal_llm.py  yt_control.py  yt_controls.py
Agent_nodes/: Input_node.py  Orchastrator_node.py  Planning_node.py  browser_node.py  conversation_node.py  file_node.py  research_node.py
agents/: base_agent.py  browser_agent.py  conversation_agent.py  file_agent.py  github_agent.py  mcp_agent.py  media_agent.py  orchestrator.py  research_agent.py  system_agent.py
config/: settings.py
interfaces/: cli.py  telegram_bot.py  whatsapp_bot.py
mcp_server/: mcp_client.py  mcp_registry.py  proxy.py
mcp_servers/: mcp_client.py  proxy.py
middleware/: summarizer.py
utility/: file_handler.py  folder_handler.py  logging.py
utils/: folder_handler.py
